# bridge-ide

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CODEX_BRIDGE_PATCH_PLAN_2026-02-24.md  CODEX_CLI_TECHNIK_UND_CONTEXT_FAKTEN_2026-02-24.md  CONTRIBUTING.md  Caddyfile  Dockerfile  HANDOFF_NEXT_SESSION_CODEX_IMPLEMENTIERUNG_2026-02-24.md  LAUNCH_CHECKLIST.md  LICENSE  NOTICE  README.md  RECOVERY_TASKLIST_2026-03-09.md  STELLEXA_CLAUDE_VERGLEICH_VERIFIZIERUNG_2026-02-24.md  STORY.md  SUBAGENT_A_READONLY_PROMPT_2026-02-24.txt  SUBAGENT_A_READONLY_TRANSKRIPT_2026-02-24.txt  SUBAGENT_B_READONLY_PROMPT_2026-02-24.txt  SUBAGENT_B_READONLY_TRANSKRIPT_2026-02-24.txt  SUBAGENT_READONLY_RUNS_2026-02-24.md  TEAM_FINDINGS.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml  requirements.txt  setup.py  skill_proposals.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.tmp_slice38_agent_files/: AGENTS.md
Backend/: .cred_key  .env.example  .whatsapp_watcher_state.json  CONTEXT_BRIDGE.md  DOCUMENTATION_SOT_INVENTORY.md  PATTERN_C_DOCS.md.bak2  SYSTEM_MESSAGES_AUDIT.md  SYSTEM_MESSAGES_FINAL.md  SYSTEM_MESSAGES_IMPLEMENTATION.md  SYSTEM_MESSAGES_STRATEGY.md  agent_liveness_supervisor.py  agent_monitor.py  agents.conf  agents.conf.bak2  api_server.py  approval_gate.py  auth.py  automation_engine.py  automations.json  board_api.py  bridge_cli_identity.py  bridge_mcp.py  bridge_mcp.py.bak.allm2  bridge_mcp.py.bak.v3p6  bridge_mcp.py.bak2  bridge_mcp.py.bak4  bridge_mcp.py.bak5  bridge_mcp.py.bak6  bridge_mcp.py.bak7  bridge_mcp.py.bak8  bridge_rag_mcp.py  (+153 more)
(+1284 files in other folders)
