[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-ide"
version = "0.1.0"
description = "Bridge ACE — Agentic Collab Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0,<16.0",
  "croniter>=1.4,<7.0",
  "websocket-client>=1.6,<2.0",
  "httpx>=0.25,<1.0",
  "mcp>=0.1",
  "watchdog>=3.0,<5.0",
  "cryptography>=41.0",
]

[project.optional-dependencies]
full = [
  "numpy>=1.26",
  "chromadb>=0.5",
  "playwright>=1.50",
]
voice = [
  "openai>=1.0",
]
office = [
  "openpyxl>=3.1",
  "python-pptx>=0.6",
  "pypdf>=3.0",
]

[project.scripts]
bridge-ide = "bridge_ide.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge_ide*"]
